fix portable version on macOS